test/corpus/class-with-inheritance.txt
================================================================================
Class with inheritance
================================================================================

Class (Person) Employee (Name, Surname, Post)
   InitPerson (Name, Surname);   // Инициализация класса Person в классе Employee 
   Macro Report()
      println("Post: ", Post);
   end;
end;

--------------------------------------------------------------------------------

(unit
  (class_definition
    (parent_classes
      (identifier))
    (identifier)
    (parameter_list
      (identifier)
      (identifier)
      (identifier))
    (class_body
      (function_call
        (identifier)
        (argument_list
          (identifier)
          (identifier)))
      (comment)
      (function_definition
        (identifier)
        (parameter_list)
        (block
          (function_call
            (identifier)
            (argument_list
              (string_literal)
              (identifier))))))))
